disabled calendar days which are older than the present day, added background image and logo for testing, replaced navbar icon and fixed position where navbar menu was opening on mobile screen to the top left

--- a/app/globals.css
+++ b/app/globals.css
@@ -132,6 +132,10 @@
   body {
     @apply bg-background text-foreground;
     margin: 0;
+    background-image: url('/barberBg.jpg');
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
     }
   html {
     @apply font-sans;
